--- a/css/common.css
+++ b/css/common.css
@@ -106,6 +106,9 @@ header .w {
     top: 68px;
     left: 250px;
 }
+.hot{
+    color: #e1251b;
+}
 .hotwords a {
     margin-right: 10px;
 }
@@ -172,191 +175,160 @@ header .w {
     font-size: 15px;
     color:rgb(51, 49, 49)
 }
+
+.navitems .hot {
+    font-weight: 700;
+    color: #e1251b;
+}
 .navitems a:hover {
     color: #e1251b;
 }
-.fs {
-    height: 480px;
+/* footer */
+footer {
+    height: 568px;
 }
-.grid {
-    height: 480px;
+.mod_service {
+    padding: 30px 0;
+    height: 42px;
+    border-bottom: 1px solid #ccc;
 }
-.fs_col1 {
+.mod_service li {
+    position: relative;
+    margin: 0 36px;
+    padding-left: 45px;
+    width: 180px;
+    height: 72px;
     float: left;
-    margin-right: 10px;
+}
+.mod_service_tit {
     overflow: hidden;
-    height: 480px;
-    width: 190px;
-}
-.J_cate {
-    margin-top: 10px;
-    height: 470px;
-    background-color: #fff;
-}
-.menu {
-    overflow: hidden;
-    padding: 10px 0;
-    margin-top: 10px;
-}
-.menu_item {
-    padding-left: 18px;
-    height: 25px;
-    line-height: 25px;
-}
-.menu_lk {
-    font-size: 14px;
-    font-style: normal;
-    color: #333;
-}
-.menu_line {
-    font-size: 12px;
-}
-.fs_col2 {
-    float: left;
-    margin-right: 10px;
-    overflow: hidden;
-    width: 800px;
-    height: 480px;
-}
-.J_focus {
-    margin-top: 10px;
-    height: 470px;
-    background-color: #fff;
-}
-.fs_col3 {
-    margin-top: 10px;
-    position: relative;
-    float: right;
-    width: 190px;
-    height: 470px;
-    background-color: #fff;
-}
-.J_user {
-    position: relative;
-    margin-top: 10px;
-    height: 102px;
-}
-.J_user::after {
-    width: 160px;
-    height: 1px;
-    left: 15px;
-    right: 15px;
-    background: -webkit-gradient(linear,right top,left top,from(white),color-stop(#eeeeee),color-stop(#eeeeee),to(white));
-    background: linear-gradient(270deg,white,#eeeeee,#eeeeee,white);
-    content: "  ";
-    bottom: 0;
-}
-.user_info {
-    position: relative;
-    height: 102px;
-}
-.user_info_lk1 {
-    height: 67px;
-}
-.user_avatar {
     position: absolute;
-    left: 20px;
-    top: 13px;
-    width: 44px;
-    height: 44px;
-
+    left: 0;
+    top: 0;
+    width: 36px;
+    height: 42px;
+    background: url(../img/footer.png) no-repeat;
+    text-indent: -999px;
 }
-.user_avatar_lk{
-    display: block;
-    width: 40px;
-    height: 40px;
-    border: 2px solid #fff;
-    border-radius: 50%;
+.mod_service_txt {
     overflow: hidden;
-    -webkit-box-shadow: 0 2px 8px rgb(0 0 0 / 5%);
-    box-shadow: 0 2px 8px rgb(0 0 0 / 5%);
-}
-.user_avatar_lk img {
-    display: block;
-    width: 40px;
-    height: 40px;
-}
-.user_show {
-    position: absolute;
-    top: 16px;
-    left: 74px;
-}
-.user_show span {
-    padding: 1px;
-}
-.user_info_lk2 {
-    display: block;
-    height: 35px;
-    text-align: center;
-}
-.user_profit_lk {
-    display: inline-block;
-    margin: 0 5px;
-    width: 70px;
-    height: 25px;
-    line-height: 25px;
-    text-align: center;
-    color: #fff;
-    border-radius: 13px;
-    background-color: #e1251b;
-}
-.user_info_lk2 a:hover {
-    background-color: #c81623;
-    color: #fff;
-
-}
-.user_profit_lk_plus {
-    background-color: #363634;
-    color: #e5d790;
-}
-.new {
-    overflow: hidden;
-    height: 130px;
-}
-.news_hd {
-    position: relative;
-    padding: 10px 0 0;
-    height: 20px;
-    line-height: 20px;
-    margin-bottom: 8px;
-}
-.news_tit {
-    display: inline-block;
-    font-size: 14px;
-    margin-left: 15px;
-    color: #333;
-}
-.news_more {
-    position: absolute;
-    right: 15px;
-    top: 10px;
-    font-size: 12px;
-    color: #999;
-}
-.news_list {
-    position: relative;
-    margin: 0 15px;
-    height: 88px;
-}
-.new .news_item {
-    max-width: 160px;
-    height: 16px;
-    white-space: nowrap;
-    overflow: hidden;
+    width: 100%;
+    height: 42px;
+    line-height: 42px;
+    font-size: 18px;
+    font-weight: 700;
     text-overflow: ellipsis;
-    color: #999;
-    margin-bottom: 6px;
+    white-space: nowrap;
+    color: #444;
 }
-.news_tag {
-    display: inline-block;
-    position: relative;
-    font-size: 12px;
-    width: 35px;
-    height: 16px;
-    line-height: 16px;
-    vertical-align: 0;
-    color: #e1251b;
-    background-color: rgba(225,37,27,.08);
-    margin-right: 6px;
+.mod_service_duo {
+    background-position: 0 -192px; 
+}
+.mod_service_kuai {
+    background-position: -41px -192px; 
+}
+.mod_service_hao {
+    background-position: -82px -192px; 
+}
+.mod_service_sheng {
+    background-position: -123px -192px; 
+}
+.mod_help {
+    overflow: hidden;
+    padding: 20px 0;
+    height: 160px;
+    border-bottom: 1px solid #ccc;
+}
+.mod_help_nav {
+    float: left;
+    width: 198px;
+    height: 159px;
+    line-height: 22px;
+}
+.mod_help_nav_con li {
+    list-style: disc;
+}
+.mod_help_nav_tit {
+    margin-bottom: 5px;
+    font-size: 14px;
+}
+.mod_help_cover {
+    float: left;
+    width: 200px;
+    height: 150px;
+}
+.mod_help_cover_tit {
+    margin-bottom: 15px;
+    font-size: 14px;
     text-align: center;
+}
+.mod_help_cover_con {
+    padding: 0 10px;
+}
+.mod_help_cover_more {
+    text-align: right;
+}
+.mod_copyright {
+    padding: 15px 0;
+    height: 265px;
+    text-align: center;
+    line-height: 22px;
+}
+.mod_copyright_split {
+    margin: 0 6px;
+    counter-reset: #ccc;
+}
+.mod_copyright_ico {
+    display: inline-block;
+    margin-right: 10px;
+    width: 15px;
+    height: 12px;
+    vertical-align: -3px;
+    background: url(../img/footer.png) no-repeat;
+}
+.mod_copyright_ico_global {
+    background-position: -108px -155px;
+}
+.mod_copyright_ico_rissia {
+    background-position: -168px -155px;
+}
+.mod_copyright_ico_indonesia {
+    background-position: -148px -155px;
+}
+.mod_copyright_ico_spain {
+    background-position: -128px -155px;
+}
+.mod_copyright_ico_thailand {
+    background-position: -108px -172px;
+}
+.mod_copyright_auth {
+    margin: 25px 0;
+
+}
+.mod_copyright_auth_ico {
+    overflow: hidden;
+    display: inline-block;
+    margin: 0 3px;
+    width: 103px;
+    height: 32px;
+    line-height: 1000px;
+    background: url(../img/footer.png) no-repeat;
+}
+.mod_copyright_auth_ico1 {
+    background-position: -205px -111px;
+}
+.mod_copyright_auth_ico2 {
+    background-position: -205px -74px;
+}
+.mod_copyright_auth_ico3 {
+    background-position: -205px -37px;
+}
+.mod_copyright_auth_ico4 {
+    background-position: -205px 0px;
+}
+.mod_copyright_auth_ico5 {
+    background-position: 0px -155px;
+}
+.mod_copyright_auth_ico6 {
+    background-position: -205px -148px;
 }
