--- a/css/index.css
+++ b/css/index.css
@@ -1019,3 +1019,123 @@
     left: 242px;
     top: 25px;
 }
+.floor_tit {
+    position: relative;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+.floor_title {
+    position: relative;
+    width: 150px;
+    height: 45px;
+    text-align: center;
+    font-size: 28px;
+    font-weight: 700;
+    line-height: 45px;
+    margin: 0 auto;
+    padding: 0 30px;
+    color: #333;
+}
+.floor_title::before,
+.floor_title::after {
+    background-image: url(../img/channels-sprite.png);
+    width: 25px;
+    height: 20px;
+    content: "";
+    position: absolute;
+    top: 50%;
+    margin-top: -10px;
+}
+.floor_title::before {
+    background-position: 0 0;
+    left: 0;
+}
+.floor_title::after {
+    background-position: -25px 0;
+    right: 0;
+}
+.channels_wrapper {
+    position: relative;
+    width: 600px;
+    padding-left: 600px;
+}
+.channels_item {
+    display: inline-block;
+    width: 290px;
+    height: 180px;    
+    margin-right: 5px;
+    margin-bottom: 5px;
+    background-color: #fff;
+    overflow: hidden;
+}
+.channels_item1,.channels_item2,
+.channels_item3,.channels_item4,
+.channels_item5,.channels_item6,
+.channels_item7,.channels_item8 {
+    position: absolute;
+}
+
+.channels_item1,
+.channels_item2 {
+    top: 0;
+    width: 290px;
+    height: 370px;
+}
+.channels_item2,.channels_item6,
+.channels_item7,.channels_item8 {
+    left: 300px;
+}
+.channels_item1,.channels_item3,
+.channels_item4,.channels_item5 {
+    left: 0;
+}
+.channels_item3,
+.channels_item6 {
+    top: 380px;
+}
+.channels_item4,
+.channels_item7 {
+    top: 570px;
+}
+.channels_item5,
+.channels_item8 {
+    top: 760px;
+}
+.channels_item_img {
+    width: 100%;
+    height: 100%;
+}
+.channels_item_img:hover {
+    opacity: .8;
+}
+.channels_item_tit {
+    display: block;
+    width: 250px;
+    height: 30px;
+    margin-left: 30px;
+    margin-right: 10px;
+    padding-top: 17px;
+    padding-bottom: 13px;
+    line-height: 30px;
+}
+.channels_item_tit_main {
+    font-size: 22px;
+    font-weight: 700;
+    color: #333;
+}
+.channels_item_tit_aside {
+    font-size: 14px;
+    color: #999;
+    margin-left: 5px;
+}
+.channels_item_imgs {
+    width: 290px;
+    height: 100px;
+    padding-left: 30px;
+}
+.channels_item_img_lk {
+    display: inline-block;
+    width: 100px;
+    height: 100px;
+    margin-right: 30px;
+}
