--- a/css/index.css
+++ b/css/index.css
@@ -1139,3 +1139,135 @@
     height: 100px;
     margin-right: 30px;
 }
+.feed_tab_wrapper {
+    background-color: #fff;
+    width: 1190px;
+    height: 60px;
+    margin-bottom: 10px;
+}
+.feed_tab {
+    width: 1080px;
+    height: 60px;
+    margin: 0 auto;
+}
+.feed_tab_item {
+    float: left;
+    position: relative;
+    overflow: hidden;
+    width: 180px;
+    height: 60px;
+    text-align: center;
+    cursor: pointer;
+}
+.feed_tab_item:hover span {
+    color: #e1251b;
+}
+.feed_tab_sprit {
+    position: absolute;
+    right: 0;
+    top: 0;
+    height: 40px;
+    margin: 10px 0;
+    width: 1px;
+    background: #dfdfdf;    
+    background: linear-gradient(180deg,white,#dfdfdf 51%,white);
+}
+.feed_tab_tit {
+    display: block;
+    font-size: 16px;
+    width: 80px;
+    height: 27px;
+    margin: 0 auto;
+    color: #333;
+    font-weight: 700;
+    margin-top: 7px;
+}
+.feed_tab_desc {
+    display: block;
+    font-size: 14px;
+    color: #999;
+}
+.feed_tab_current .feed_tab_tit {
+    border-radius: 50px;
+    background-color: #e1251b;
+    color: #fff;
+}
+.feed_tab_current:hover .feed_tab_tit {
+    color: #fff;
+}
+.feed_tab_current .feed_tab_desc {
+    color: #e1251b;
+}
+.feed_wrapper {
+    position: relative;
+    width: 1200px;
+    min-height: 305px;
+}
+.feed_item {
+    position: relative;
+    overflow: hidden;
+    float: left;
+    width: 230px;
+    height: 322px;
+    margin: 0 5px 10px;
+    background-color: #fff;
+}
+.feed_item_img_box {
+    width: 150px;
+    height: 150px;
+    margin: 30px 40px 40px;
+}
+.feed_item_img {
+    width: 100%;
+    height: 100%;
+}
+.feed_item_info {
+    width: 190px;
+    height: 48px;
+    font-size: 14px;
+    overflow: hidden;
+    padding: 0 20px;
+    line-height: 24px;
+    color: #666;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
+.feed_item_symbol {
+    display: inline-block;
+    width: 24px;
+    height: 16px;
+    line-height: 17px;
+    padding: 0 5px;
+    background-color: #e1251b;
+    font-size: 12px;
+    color: #fff;
+    border-radius: 2px;
+    font-family: Helvetica Neue,Hiragino Sans GB,SimSun,serif;
+}
+.feed_item_price {
+    float: left;
+    padding-left: 20px;
+    margin-top: 5px;
+    width: 75px;
+    text-align: left;
+    color: #e1251b;
+}
+.feed_price_ico {
+    vertical-align: middle;
+    font-size: 12px;
+    font-weight: 700;
+    font-family: MicrosoftYahei-regular,Arial,Helvetica,sans-serif;
+    margin-left: -1px;
+}
+.feed_item_price_txt {
+    font-size: 20px;
+    font-weight: 700;
+    font-family: arial,sans-serif;
+    margin-left: -5px;
+}
+.feed_item_price_dec {
+    font-size: 12px;
+    margin-left: -3px;
+}
